filing status bugfix, #7

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -234,7 +234,7 @@
                 <div class="form-group row">
                   <label for="filingStatusH" class="col-sm-6 col-form-label">Filing Status</label>
                   <div class="col-sm-6">
-                    <select class="form-control" id="filingStatusH" required name="filingStatusH"
+                    <select class="form-control" id="filingStatusH" name="filingStatusH"
                             [(ngModel)]="h.filingStatus">
                       <option value=""> - unchanged - </option>
                       <option value="single">Single</option>
