--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,6 +100,22 @@
                        currencyMask [options]="{precision:0}" [(ngModel)]="dm.baseline.taxCredits"/>
               </div>
             </div>
+
+            <!--<div class="form-group row">-->
+              <!--<label for="state" class="col-sm-6 col-form-label">State</label>-->
+              <!--<div class="col-sm-6">-->
+                <!--<select id="state" name="state" [(ngModel)]="dm.baseline.state" class="form-control form-control-warning">-->
+                  <!--<option [value]="undefined">-->
+                    <!--None-->
+                  <!--</option>-->
+                  <!--<option *ngFor="let s of statesList" [value]="s">-->
+                    <!--{{s.displayStr}}-->
+                  <!--</option>-->
+                <!--</select>-->
+
+              <!--</div>-->
+            <!--</div>-->
+
           </div>
         </div>
 
